refs #14319. Fixes issue with hovering style on mobile platforms by not relying on :hover pseud class. Also introduce a mobile stylesheet that remove entirely hovering as it is not very meaningfull on mobile devices.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@27441 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/treemap/themes/MobileTreeMap.css
+++ b/treemap/themes/MobileTreeMap.css
@@ -18,16 +18,6 @@
 	border: 1px solid black;
 }
 
-/* on desktop recent browsers you may prefer to use :hover pseudo-class instead
-   of dojoxTreeMapHovered */
-
-.dojoxTreeMapLeaf.dojoxTreeMapHovered {
-	border-color: white;
-}
-
-.dojoxTreeMapGroup.dojoxTreeMapHovered {
-}
-
 .dojoxTreeMapSelected {
 	border-color: red;
 }
@@ -41,12 +31,5 @@
 	bottom: 1px;
 	border: 1px solid red;
 	pointer-events: none;
-	z-index: 20;
-}
-
-.dj_iequircks .dojoxTreeMapIEHack.dojoxTreeMapSelected,
-.dj_ie7 .dojoxTreeMapIEHack.dojoxTreeMapSelected + div,
-.dj_ie8 .dojoxTreeMapIEHack.dojoxTreeMapSelected + div {
-	border:  1px solid red;
 	z-index: 20;
 }
